--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,7 @@ solution ( mainly because I created it :^d ).
 
 == Installation
 
++script/plugin install git://github.com/tschmidt/nifty_cal.git+
 
 == Quick and Dirty Instructions
 
